Typescript Counter-ImageGallery-Locations-VoiceDetection Complated

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 <a href="vite_typescript_react_todo_app/out" target="_blank" class="projectItem">
                     <span>Vite Typescript React Todo App</span>
                 </a>
+                <a href="typescript_counter_imageGallery_voiceDetection_locations/build/index.html" target="_blank"
+                    class="projectItem">
+                    <span>Counter - ImageGallery - Voice Detection - Locations</span>
+                </a>
             </article>
         </div>
     </div>
